add list_all_reservations and list_new_reservations
