# db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.27.0
+//   sqlc v1.28.0
 
 package db
 
@@ -8,6 +8,7 @@ import (
 	"time"
 
 	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
 )
 
 type Reservation struct {
@@ -52,14 +53,14 @@ type Room struct {
 }
 
 type RoomRestriction struct {
-	ID            int32     `json:"id"`
-	StartDate     time.Time `json:"start_date"`
-	EndDate       time.Time `json:"end_date"`
-	RoomID        int32     `json:"room_id"`
-	ReservationID int32     `json:"reservation_id"`
-	RestrictionID int32     `json:"restriction_id"`
-	CreatedAt     time.Time `json:"created_at"`
-	UpdatedAt     time.Time `json:"updated_at"`
+	ID            int32       `json:"id"`
+	StartDate     time.Time   `json:"start_date"`
+	EndDate       time.Time   `json:"end_date"`
+	RoomID        int32       `json:"room_id"`
+	ReservationID pgtype.Int4 `json:"reservation_id"`
+	RestrictionID int32       `json:"restriction_id"`
+	CreatedAt     time.Time   `json:"created_at"`
+	UpdatedAt     time.Time   `json:"updated_at"`
 }
 
 type Session struct {
